--- a/slides/capitulo-01/slide-011.html
+++ b/slides/capitulo-01/slide-011.html
@@ -1,12 +1,14 @@
 <h6>O que é / Como funciona ?? </h6>
 
-<p style="margin:0;" class=" pull-left">Logica de Programação:</p> <br>
+<p style="margin:0;" class=" pull-left">Lógica de Programação:</p> <br>
 <div class="fragment col-xs-12 pull-left"style="min-height:300px;">
     <br>
     <p style=" margin:0;"> É o modo como se escreve um programa de computador, um algoritmo. </p>
     <br>
     <ul class="fragment">
-        <li>Condicionais (IF, SWITCH)</li>
-        <li>Loops iterativos (FOR, FOREACH, WHILE)</li>
+        <li>Variáveis e Tipos (int, float)</li>
+        <li>Condicionais (if, switch)</li>
+        <li>Loops iterativos (for, foreach, while)</li>
+        <li>Organizar para escrever menos código (functions)</li>
     </ul>
 </div>
