--- a/slides/capitulo-01/slide-06.html
+++ b/slides/capitulo-01/slide-06.html
@@ -4,7 +4,7 @@
     <p style="margin:0;" class="pull-left"><a target="_blank" href="https://www.youtube.com/watch?v=7_LPdttKXPc">A internet</a>:</p> <br> 
     <p style="margin:0;">
     <ul class="fragment pull-left">
-        <li class="">PCs, Redes, Servidores, Ips, Roteadores, Dominios... </li>
+        <li class="">PCs, Redes, Servidores, IPS, Roteadores, Domínios... </li>
 
         <img class="logo-tesseract"
              data-src="../assets/images/comofunciona_internet.jpg"
