--- a/slides/capitulo-01/slide-07.html
+++ b/slides/capitulo-01/slide-07.html
@@ -4,7 +4,7 @@
     <p style="margin:0;" class="pull-left"><a target="_blank" href="https://www.youtube.com/watch?v=7_LPdttKXPc">A internet</a>:</p> <br> 
     <p style="margin:0;">
     <ul class=" pull-left">
-        <li class="">PCs, Redes, Servidores, Ips, Roteadores, Dominios... </li>
+        <li class=""> <a target="_blank" href="https://logstalgia.io">Data visualization das requests em um servidor</a></li>
         <li class=""> <a target="_blank" href="https://gsuite.tools/traceroute">Traceroute visual</a></li>
         <li class=""> <a target="_blank" href="https://www.submarinecablemap.com">Submarine Cable Map </a></li>
         <li class="fragment">Termos/Conceitos: <br>
