--- a/slides/capitulo-02/slide-01.html
+++ b/slides/capitulo-02/slide-01.html
@@ -1,4 +1,4 @@
-<h6> Ta. E.. por onde eu começo? </h6>
+<h6> Tá...  <br> E por onde eu começo? </h6>
 
 <div class="col-xs-12 pull-left"style="min-height:300px;">
   <p style="margin:0;">
@@ -6,11 +6,19 @@
       <li class="">Jogos voltados para o ensino de programação<br>
           <ul>
               <li><a target="_blank" href="https://codecombat.com/">CodeCombat</a>  </li>
-              <li><a target="_blank" href="https://studio.io">Studio.io</a> </li>
-              <li><a target="_blank" href="https://jsfight.club/">JSFight</a>, <a target="_blank" href="https://warrior.js.org/">WarriorJS</a>, <a target="_blank" href="https://www.codingame.com">Codingame</a>
-              </li> 
+              <li><a target="_blank" href="https://jsfight.club/">JSFight</a></li>
+              <li><a target="_blank" href="https://warrior.js.org/">WarriorJS</a></li>
+              <li><a target="_blank" href="https://www.codingame.com">Codingame</a></li>
+              
+              <li><a target="_blank" href="https://github.com/mbrukman/awesome-gamedev"> mbrukman/awesome-gamedev</a></li>
+              <li><a target="_blank" href="https://github.com/Calinou/awesome-gamedev"> calinou/Awesome-gamedev</a></li>
           </ul>
       </li>
+       Listas curadas do github (awesome)
+          <ul>
+              <li><a target="_blank" href="https://github.com/mbrukman/awesome-gamedev"> mbrukman/awesome-gamedev</a></li>
+              <li><a target="_blank" href="https://github.com/Calinou/awesome-gamedev"> calinou/Awesome-gamedev</a></li>
+          </ul>
 
 
 
