--- a/slides/capitulo-03/slide-01.html
+++ b/slides/capitulo-03/slide-01.html
@@ -6,6 +6,7 @@
         <li class="">Sites 
             <ul>
                 <li><a target='_blank' href="http://qmrepresenta.com.br">qmrepresenta.com.br</a> (Política brasileira) </li>
+                
             </ul>
             <li class="">Animações 
                 <ul>
@@ -16,6 +17,7 @@
             <li class="">Data Visualization
                 <ul>
                     <li> <a target="_blank" href="https://youtu.be/Bh1zs_WdqrE">Dev. da Vivalá</a> - gerado a partir do log do <a target="_blank" href="https://git-scm.com/">GIT</a> usando o <a target="_blank" href="http://gource.io/">gource</a> </li>
+                    <li><a target='_blank' href="https://gabriellelamarrlemee.github.io/thesis-simulation/">https://gabriellelamarrlemee.github.io/thesis-simulation/</a> (Gamefication e Data visualization) </li>
                 </ul>
             </li>
     </ul>
