--- a/slides/fim.html
+++ b/slides/fim.html
@@ -4,3 +4,12 @@
   height="220" />
 
 <h5>GGWP</h5>
+
+
+<br>
+
+<p style="font-size:25px"><a href="mailto:renato.gomes@grupotesseract.com">renato.gomes@grupotesseract.com</a></p>
+<p><a href="fb.com/renatoagomes"><i class="fa fa-facebook-square"></i></a>
+
+<a href="mailto:renatoo.agomes@gmail.com"><i class="fa fa-instagram"></i></a></p>
+</p>
