--- a/slides/finalizando.html
+++ b/slides/finalizando.html
@@ -2,6 +2,6 @@
 
     
 <ul>
-  <li class="fragment">Duvidas? Criticas? Sugestões?</li>
+  <li class="fragment">Dúvidas? Críticas? Sugestões?</li>
 </ul>
 
