--- a/slides/titulo.html
+++ b/slides/titulo.html
@@ -1,7 +1,13 @@
 <h6 style="margin:.2em"> </h5>
-<h6 style="margin:.2em;">Um 'pouco' sobre programação</h6>
+<br>
+<br>
+
+<h5 style="margin:.2em;">Um 'pouco' sobre programação</h5>
 
 <div style="margin:5em 0 0" class="text-center">
-    <a href="http://aula-di-programacao.grupotesseract.com.br ">http://aula-di-programacao.grupotesseract.com.br </a>
+    <a href="https://aula-di.herokuapp.com">https://aula-di.herokuapp.com</a>
+    <br>
+    
+    <p><strong>Renato Gomes</strong></p>
 </div>
 
